--- a/style.css
+++ b/style.css
@@ -3,14 +3,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10%;
+    
+
 }
 
 img {
     display: block;
     max-width: 100%;
+    left: 70%;
+    top:20%;
+    margin-left: 70px;
+    margin-top: 70px;
+    width: 70%;
+    background-color: blue;
 }
 
-#foto {}
+#foto {background-color: rgb(8, 5, 187);}
 
 #santinho {
     height: 600px;
@@ -18,19 +27,21 @@ img {
     display: flex;
     flex-flow: column;
     overflow: hidden;
+    background-color:rgb(8, 5, 187);
 }
 
-h1 {
+h1 { font-family: Arial;
     margin: 0px;
     padding: 0px;
 }
 
-#cargo {}
+#cargo {font-family: Arial;}
 
-#slogan {}
+#slogan {font-family: Arial;}
 
 #final {}
 
-#numero {}
+#numero {font-style: oblique;}
 
-#partido {}
+#partido {font-family: arial}
+
